--- a/src/main/resources/views/MovieView.fxml
+++ b/src/main/resources/views/MovieView.fxml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane prefHeight="333.0" prefWidth="340.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dk.easv.mrs.GUI.Controller.MovieViewController">
+<AnchorPane prefHeight="670.0" prefWidth="482.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dk.easv.mrs.GUI.Controller.MovieViewController">
    <children>
-      <ListView fx:id="lstMovies" layoutY="54.0" prefHeight="156.0" prefWidth="200.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="54.0" />
-      <TextField fx:id="txtMovieSearch" layoutX="10.0" layoutY="14.0" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="10.0" />
+      <ListView fx:id="lstMovies" layoutY="233.0" prefHeight="427.0" prefWidth="462.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="233.0" />
+      <TextField fx:id="txtMovieSearch" layoutX="14.0" layoutY="198.0" prefHeight="26.0" prefWidth="423.0" promptText="Search" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="198.0" />
+      <TextField fx:id="txtYear" layoutX="33.0" layoutY="98.0" prefHeight="26.0" prefWidth="108.0" promptText="Movie year" />
+      <TextField fx:id="txtTitle" layoutX="33.0" layoutY="38.0" prefHeight="26.0" prefWidth="368.0" promptText="Movie title" />
+      <Button fx:id="btnClick" layoutX="253.0" layoutY="72.0" mnemonicParsing="false" onAction="#btnHandleClick" prefHeight="26.0" prefWidth="148.0" text="Create" />
+      <Button layoutX="251.0" layoutY="124.0" mnemonicParsing="false" onAction="#onActionUpdate" prefHeight="26.0" prefWidth="148.0" text="Update" />
+      <Button layoutX="251.0" layoutY="163.0" mnemonicParsing="false" onAction="#onActionDelete" prefHeight="26.0" prefWidth="148.0" text="Delete" />
    </children>
 </AnchorPane>
